src/main/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: learnright
  name: booktitle
  labels:
    app: booktitle
spec:
  selector:
    matchLabels:
      app: booktitle
  template:
    metadata:
      labels:
        app: booktitle
    spec:
      containers:
      - name: booktitle
        image: registry.minikube.local:80/testunited/examples-learnright-booktitle:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
