src/main/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: learnright
  name: booktitle
spec:
  type: NodePort
  selector:
    app: booktitle
  ports:
  - protocol: TCP
    nodePort: 32001
    port: 80
    targetPort: 80
