src/main/kube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: learnright
  name: booktitle
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: learnright.minikube.local
    http:
      paths:
      - path: /booktitles
        backend:
          serviceName: booktitle
          servicePort: 80
